# tupy-backend

./: .coveragerc  .dockerignore  .env_example  .gitignore  .gitlab-ci.yml  Dockerfile  MAIN_IDEA.md  Makefile  README.md  docker-compose.yaml  entry.py  entrypoint.sh  pyproject.toml
.github/workflows/: ci.yml
app/: README.md  app.py  config.py  containers.py  exceptions.py  main.py  routes.py  schemas.py  types.py
app/api/: exceptions.py
app/api/authentication/: dependencies.py  schemas.py  utils.py  views.py
app/api/common/: schemas.py  views.py
app/api/orders/: schemas.py  views.py
app/api/root/: schemas.py  views.py
app/api/users/: schemas.py  views.py
app/db/: database.py  session.py
app/dependencies/: db.py  settings.py
app/domain/: __init__.py  base.py  enums.py  orders.py  users.py
app/uow/: connection.py  repository.py  unit_of_work.py
app/uow/order/: repository.py
app/uow/user/: repository.py
migrations/: env.py
migrations/versions/: 556df9ab3eef_add_users_table.py  8c2ea235bbdd_add_role_to_users_table.py  e51213e259c3_add_orders_table.py
scripts/: 01-init-postgis.sh  build-osrm.sh  create_admin_user.py
tests/: conftest.py  constants.py  factories.py
tests/integration/: README.md  conftest.py
tests/integration/api/authentication/: test_login.py  test_sign_up.py  test_user_profile.py
tests/integration/api/common/: test_info.py
tests/integration/api/orders/: test_create_order.py
tests/integration/api/root/: test_healthcheck.py
tests/integration/api/users/: test_create_user.py  test_get_user.py  test_get_users.py  test_user_profile.py
tests/unit/api/authentication/: test_utils.py
